- Fixed: Cart insert tags did not work
- Fixed: Wrong check for existing attribute (Ticket #218)
- Fixed: Updated address formats for Contao 2.9 (especially Great Britain)
- Fixed: Address was not checked when forwarding in checkout module
- Fixed: Disable grouping in mail template languages
- Fixed: mod_iso_productlist template contained a CSS ID instead of a class
- Fixed: Authorize.net delimiter value ignored (Ticket #227)

Version 0.2.beta1 (2010-08-25)
------------------------------
- Introducing IsotopeProductCollection, abstracting a collection of products (eg. cart, order, wishlist)
- Introducing IsotopeGallery class for creating custom image galleries
- Checkout condition data is now available in order confirmation mail (Ticket #103)
- Added: Product weight field and weight units
- Added: Shipping module for price based on product weight
- Added: New payment module for ePay (www.epay.eu)
- Added: Hooks for altering product before output
- Added: Payment and and shipping module can now provide additional info for each order (trough a button/operation)
- Added: Limit panel to tl_iso_product_categories (Ticket #132)
- Added: Jumpto page support when adding product to cart (Ticket #72)
- Added: Batch invoice printing, by status
- Added: Consolidation of order management global operations into a tools menu
- Added: Backend order notes field
- Added: Option to watermark medium and large images
- Added: Store ID to group carts if you're using Isotope on multiple stores/domains
- Added: (partial) translation for french and danish
- Improved: New css classes for product list when using grid layout
- Improved: Surcharges can now be applied before calculating tax for a product
- Improved: Allow custom forms/data after the cart (eg. Coupon input)
- Improved: cart + order table are now storing the variant ID instead of base product ID
- Improved: MediaManager now standardizes file names to prevent file system issues