@@ -54,7 +54,8 @@ Version 0.2.beta2
 - Fixed: Address was not checked when forwarding in checkout module
 - Fixed: Disable grouping in mail template languages
 - Fixed: mod_iso_productlist template contained a CSS ID instead of a class
-- Fixed: Authorize.net delimiter value ignored (Ticket #227)
+- Fixed: Authorize.net delimiter value ignored (Ticket #227),
+- Fixed: Added x_country, x_phone, x_email_address to Authorize.net request (Ticket #228)
 
 Version 0.2.beta1 (2010-08-25)
 ------------------------------
